# zo-tunnel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
Formula/: zobite-tunnel.rb
configs/: client.yaml  server.example.yaml  server.yaml
crates/zo-tunnel-client/: Cargo.toml
crates/zo-tunnel-client/src/: client.rs  config.rs  main.rs  tunnel_manager.rs  web_server.rs
crates/zo-tunnel-protocol/: Cargo.toml
crates/zo-tunnel-protocol/src/: lib.rs  self_update.rs
crates/zo-tunnel-server/: Cargo.toml
crates/zo-tunnel-server/src/: caddy.rs  config.rs  dashboard.rs  main.rs  proxy.rs  registry.rs  server.rs  traefik.rs
crates/zobite-tunnel-client/: Cargo.toml
crates/zobite-tunnel-client/src/: client.rs  config.rs  main.rs
crates/zobite-tunnel-protocol/: Cargo.toml
crates/zobite-tunnel-protocol/src/: lib.rs
crates/zobite-tunnel-server/: Cargo.toml
crates/zobite-tunnel-server/src/: config.rs  main.rs  metrics.rs  proxy.rs  registry.rs  server.rs
scripts/: build.sh  e2e_test.sh  install.sh  release.sh  setup-server.sh
web/: app.js  index.html  style.css
web/client/: app.js  index.html  style.css
