[package]
name = "zo-tunnel-client"
version = "0.2.0"
edition = "2021"

[dependencies]
zo-tunnel-protocol = { path = "../zo-tunnel-protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
yamux = { workspace = true }
futures = { workspace = true }
