[package]
name = "zo-tunnel-client"
version = "0.5.13"
edition = "2021"

[dependencies]
zo-tunnel-protocol = { path = "../zo-tunnel-protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
yamux = { workspace = true }
futures = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
dashmap = { workspace = true }
getrandom = "0.2"
libc = "0.2"
