[package]
name = "zo-tunnel-server"
version = "0.5.9"
edition = "2021"

[dependencies]
zo-tunnel-protocol = { path = "../zo-tunnel-protocol" }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dashmap = { workspace = true }
yamux = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
subtle = "2"
getrandom = "0.2"
